# Cathode

./: .gitignore  AGENTS.md  LICENSE  PLAN.md  README.md  cathode.sample.toml  meson.build  theme.toml
data/: com.n0zoberi.Cathode.desktop  org.cathode.Cathode.desktop
po/: POTFILES  meson.build  zh_CN.po
shaders/: blur.frag  retro.frag  retro.vert
src/: app.c  app.h  cathode.gresource.xml  config.c  config.h  main.c  meson.build  search.c  search.h  shader.c  shader.h  tab.c  tab.h  terminal.c  terminal.h
